@@ -4,6 +4,9 @@
 # BREAK = change breaks existing code
 # BUG	= fixed a bug that was (or could have been) crashing
 
+February 8, 2002
+	Rect and Surface subclassable types
+
 February 1, 2002
 	locking problem with 90 degree rotate [BUG]
 	set_icon overrides default icon
